--- a/Exp.html
+++ b/Exp.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="col-6">
-  <h1>Experiencia Profecional</h1>
+  <h1>Experiencia Profesional</h1>
   <p>En la materia de Desarrollo Sustentable con un grupo de compañeros elaboramos un fertilizanto 100% natural y de buena calidad.<br><br> En la materia de Fundamentos de ingenieria de software en un pequeño equipo de companeros realizamos un software conectado a una base de datos que administraba las entradas y salidas del personal de una empresa<br><br>En la materia de programaci&oacute;n web junto a un par de compañeros y amigos realizamos una pagina web la cual estaba conectada a una base de datos, se podian subir y visualizar imagenes, as&iacute; como enviar mensajes de contacto a un correo electronico.</p></div>
 <div class="col-3 right">
   <div class="aside">
